--- a/theater/index.html
+++ b/theater/index.html
@@ -3,16 +3,17 @@
 <head>
 	<!-- This is a comment! Text here will be ignored by the browser. -->
 	<meta charset="UTF-8">
-	<title> Norah Christensen's ECS Portfolio </title>
+	<title> Norah Christensen's Theater </title>
 	<link href="myCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header">
-  	<h1> Norah Christensen's ECS Portfolio </h1>
+  	<h1> Norah Christensen's Theater Page </h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | 2 | 3</h3>
+    <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="../theater/index.html">Theater</a> </h3>
+ href="index.html">Home</a> | 2 | 3</h3>
   </div>
   <div class="content">
 	  Hello World!
