--- a/theater/index.html
+++ b/theater/index.html
@@ -12,8 +12,7 @@
   	<h1> Norah Christensen's Theater Page </h1>
   </div>
   <div class="nav">
-    <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="../theater/index.html">Theater</a> </h3>
-  </div>
+    <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Theater</a> </h3>
   </div>
   <div class="content">
 	  Hello World!
