--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,12 @@
     <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="theater/index.html">Theater</a>  </h3>
   </div>
   <div class="content">
-
+	  <h3> Intrests: </h3>
+	  <ol>
+		  <li>Tennis</li>
+		  <li>Piano</li>
+		  <li>Anything Theater</li>
+	  </ol>
 
 
 
