--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,10 @@
 	  <ol>
 		  <li>Tennis</li>
 		  <li>Piano</li>
-		  <li>Anything Theater</li>
+		  <li>Soccer</li>
+		  <li>Anything theater related</li>
+		  <li>Reading</li>
+		  
 	  </ol>
 
 
