--- a/aboutme.html
+++ b/aboutme.html
@@ -25,6 +25,15 @@
 		  
 	  </ol>
 
+	  <h3> Skills: </h3>
+	    <ol>
+		  <li>I raised $42,000 for Souper Bowl of Caring in middle school</li>
+		  <li>I was in student government in 7th and 8th grade </li>
+		  <li>I am in ASL and have participated in Sign A Song </li>
+		  
+	  </ol>
+	  
+
 
 
 
