--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="header">
-  	<h1> Norah Christensen's | Abut Me </h1>
+  	<h1> Norah Christensen's | About Me </h1>
   </div>
   <div class="nav">
     <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="theater/index.html">Theater</a>  </h3>
