--- a/aboutme.html
+++ b/aboutme.html
@@ -18,12 +18,12 @@
 	 <body> Hi! My name is Norah! I am a freshman here at Skyline. </body>
 	  
 	  <h3> Intrests </h3>
-	  <ul>
-		  <li>Tennis</li>
-		  <li>Piano</li>
-		  <li>Anything theater related</li>
-		  
-	  </ul>
+	  <body> I have many intrests. Let me tell you about it!
+	I have done tennis lessons in the past, but last fall, I made it on the freshman/sophmore tennis team!
+	This has encouraged me to take more tennis lessons and try out again next school year! I loved meeting new people and improving my tennis skills.
+	I was put in piano lessons in the summer of fifth grade, and I've loved it ever since! I love my piano teacher and hope to continue doing it!
+	Lastly, I have always love theater. I was put in the school musical in second grade, and have been in it ever since! This year, I have acomplished being in
+	the school musical and play.</body>
 
 	  <h3> Hobbies </h3>
 	  <ul>
@@ -39,6 +39,7 @@
 		  <li>I raised $42,000 for Souper Bowl of Caring in middle school</li>
 		  <li>I was in student government in 7th and 8th grade </li>
 		  <li>I have participated in Sign A Song </li>
+		  <li>I have hiked Granger Peak</li>
 		  
 	  </ul>
 
