--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,10 +15,11 @@
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../theater/index.html">Theater</a> </h3>
   </div>
   <div class="content">
-	  Hello World!
+	  <h3>Typing Results </h3>
+	  <img src"
   </div>
   <div class="footer">
-    <h4> <a href="../aboutme.html">About Me </a> | Contact | Copyright 2021</h4>
+    <h4> <a href="../aboutme.html">About Me </a> | <a href="mailto:9647305@graniteschools.org">Contact</a> | Copyright 2021</h4>
   </div>
 </div>
 </body>
