--- a/ecs/index.html
+++ b/ecs/index.html
@@ -16,7 +16,9 @@
   </div>
   <div class="content">
 	  <h3>Typing Results </h3>
-	  <img src"
+	  <img src="../images/typing.png" alt="Typing Test" width="960" >
+	  <h3>Coding Projects </h3>
+	  <h3>Certifications</h3>
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | <a href="mailto:9647305@graniteschools.org">Contact</a> | Copyright 2021</h4>
