--- a/aboutme.html
+++ b/aboutme.html
@@ -21,9 +21,9 @@
 	  <body> I have many intrests. Let me tell you about it!
 	I have done tennis lessons in the past, but last fall, I made it on the freshman/sophmore tennis team!
 	This has encouraged me to take more tennis lessons and try out again next school year! I loved meeting new people and improving my tennis skills.
-	I was put in piano lessons in the summer of fifth grade, and I've loved it ever since! I love my piano teacher and hope to continue doing it!
-	Lastly, I have always love theater. I was put in the school musical in second grade, and have been in it ever since! This year, I have acomplished being in
-	the school musical and play.</body>
+	When I was going into fifth grade, I was put in piano lessons. I've stayed with it since! I love my piano teacher and hope to continue doing it!
+	Lastly, I have always love theater. I was apart of the school musical in second grade, and have been in it ever since! This year, I have acomplished being in
+	the school musical and the play.</body>
 
 	  <h3> Hobbies </h3>
 	  <ul>
