--- a/aboutme.html
+++ b/aboutme.html
@@ -24,6 +24,12 @@
 	When I was going into fifth grade, I was put in piano lessons. I've stayed with it since! I love my piano teacher and hope to continue doing it!
 	Lastly, I have always love theater. I was apart of the school musical in second grade, and have been in it ever since! This year, I have acomplished being in
 	the school musical and the play.</body>
+	  <ol>
+		  <li>Tennis</li>
+		  <li>Piano</li>
+		  <li>Anything theater related</li>
+	  </ol>
+	  
 
 	  <h3> Hobbies </h3>
 	  <ul>
