--- a/theater/index.html
+++ b/theater/index.html
@@ -15,7 +15,30 @@
     <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Theater</a> </h3>
   </div>
   <div class="content">
-	  Hello World!
+	  
+	  <h3>Spotlight: My Mom</h3>
+	  <p>I want to spotlight my Mom because she started my journey. Putting me in the musical in 2nd grade changed my life. She has supported the most along the way, and I am grateful for that.</p>
+	  
+	  <h3>Timeline</h3>
+	  <ul>
+		  <li>2nd grade: My mom signed me up for the school musical. I performed my first play.</li>
+		  <li>3rd grade: I auditioned for my first time.</li>
+		  <li>4th grade: I didn't understand the play, so I did stage crew instead.</li>
+		  <li>5th grade: This was my second audition. I was put into ensemble.</li>
+		  <li>6th grade: I was put into ensemble and met a lot of new people!</li>
+		  <li>7th grade: I auditioned for a featured role and got it!</li>
+		  <li>8th grade: I got a small part and I made a lot of new friends.</li>
+		  <li>Current: This is my first year doing a high school musical and play!</li>
+	  </ul>
+	  
+	  <img src="2nd_grade.jpg" alt="2nd_grade"
+		float: left;/>
+	  <img src="eccles.jpg" alt="eccles"
+		  float:middle;/>
+	  
+	  
+
+  
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | Contact | Copyright 2021</h4>
