--- a/theater/index.html
+++ b/theater/index.html
@@ -31,10 +31,10 @@
 		  <li>Current: This is my first year doing a high school musical and play!</li>
 	  </ul>
 	  
-	  <img src="2nd_grade.jpg" alt="2nd_grade"
+	  <img src="2nd_grade.jpg" alt="2nd_grade">
 		float: left;/>
-	  <img src="eccles.jpg" alt="eccles"
-		  float:middle;/>
+	  <img src="eccles.jpg" alt="eccles">
+		float:middle;/>
 	  
 	  
 
