--- a/theater/index.html
+++ b/theater/index.html
@@ -31,12 +31,8 @@
 		  <li>Current: This is my first year doing a high school musical and play!</li>
 	  </ul>
 	  
-	  <img src="2nd_grade.jpg" alt="2nd_grade">
-		float: left;/>
-	  <img src="eccles.jpg" alt="eccles">
-		float:middle;/>
-	  
-	  
+	  <img src="../images/2nd_grade.jpg" alt="2nd grade" width="360" float=left>
+	  <img src="../images/eccles.jpg" alt="eccles" width="360" float=middle>
 
   
   </div>
