--- a/theater/index.html
+++ b/theater/index.html
@@ -19,7 +19,7 @@
 	  <h3>Spotlight: My Mom</h3>
 	  <p>I want to spotlight my Mom because she started my journey. Putting me in the musical in 2nd grade changed my life. She has supported the most along the way, and I am grateful for that.</p>
 	  
-	  <h3>Timeline</h3>
+	  <h2>Timeline</h2>
 	  <ul>
 		  <li>2nd grade: My mom signed me up for the school musical. I performed my first play.</li>
 		  <li>3rd grade: I auditioned for my first time.</li>
@@ -31,9 +31,12 @@
 		  <li>Current: This is my first year doing a high school musical and play!</li>
 	  </ul>
 	  
-	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="250" height="250" float=left> <img src="../images/eccles.jpg" alt="eccles" width="250" height="250" float=middle>
+	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="210" height="210" float=left> <img src="../images/eccles.jpg" alt="eccles" width="210" height="150" float=middle>
 
-  
+<p>I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see musicals and plays. 
+I've gone to elementary schools, middle schools, and different high schools to go see musicals too! I love seeing how different people do different things in theater. I
+love supporting other people and just watching musicals.
+	  
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | Contact | Copyright 2021</h4>
