--- a/theater/index.html
+++ b/theater/index.html
@@ -15,7 +15,10 @@
     <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Theater</a> </h3>
   </div>
   <div class="content">
-	  
+	  <p>I have loved theater since I was young. I've been doing the school musicals since 2nd grade. I love going to see a performances and being in them too!
+	  I've taken theater camps over the summers to help me work on my skills. I'm also taking choir this year to help me learn more about my voice.
+	  I hope to keep doing theater throughout high school! </p>
+
 	  <h3>Spotlight: My Mom</h3>
 	  <p>I want to spotlight my Mom because she started my journey. Putting me in the musical in 2nd grade changed my life. She has supported the most along the way, and I am grateful for that.</p>
 	  
@@ -33,9 +36,10 @@
 	  
 	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="210" height="210" float=left> <img src="../images/eccles.jpg" alt="eccles" width="210" height="210" float=middle>
 
-<p>I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see musicals and plays. 
+<p>I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see them. 
 I've gone to elementary schools, middle schools, and different high schools to go see musicals too! I love seeing how different people do different things in theater. I
-love supporting other people and just watching musicals.
+love supporting other people and just watching musicals.</p>
+
 	  
   </div>
   <div class="footer">
