--- a/theater/index.html
+++ b/theater/index.html
@@ -19,7 +19,7 @@
 	  I've taken theater camps over the summers to help me work on my skills. I'm also taking choir this year to help me learn more about my voice.
 	  I hope to keep doing theater throughout high school! </p>
 
-	  <h3>Spotlight: My Mom</h3>
+	  <h2>Spotlight: My Mom</h2>
 	  <p>I want to spotlight my Mom because she started my journey. Putting me in the musical in 2nd grade changed my life. She has supported the most along the way, and I am grateful for that.</p>
 	  
 	  <h2>Timeline</h2>
@@ -31,10 +31,16 @@
 		  <li>6th grade: I was put into ensemble and met a lot of new people!</li>
 		  <li>7th grade: I auditioned for a featured role and got it!</li>
 		  <li>8th grade: I got a small part and I made a lot of new friends.</li>
-		  <li>Current: This is my first year doing a high school musical and play!</li>
+		  <li>9th grade (current): This is my first year doing a high school musical and play!</li>
 	  </ul>
-	  
 	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="210" height="210" float=left> <img src="../images/eccles.jpg" alt="eccles" width="210" height="210" float=middle>
+
+	  <h2>Goals</h2>
+	  <ul>
+		  <li>Be in the school musical all four years of high school</li>
+		  <li>Be apart of an advanced choir</li>
+		  <li>Audition for a lead role</li>
+	  </ul>
 
 <p>I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see them. 
 I've gone to elementary schools, middle schools, and different high schools to go see musicals too! I love seeing how different people do different things in theater. I
