--- a/theater/index.html
+++ b/theater/index.html
@@ -35,17 +35,16 @@
 	  </ul>
 	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="210" height="210" float=left> <img src="../images/eccles.jpg" alt="eccles" width="210" height="210" float=middle>
 
+	  <p>I love being entertained. Either by theater performances, comedy, movies, shows, or concerts.I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see them.
+I've gone to elementary schools, middle schools, and different high schools to go see musicals too! I love seeing how different people do different things in theater. I
+love supporting other people and just watching musicals.</p>
+	 
 	  <h2>Goals</h2>
 	  <ul>
 		  <li>Be in the school musical all four years of high school</li>
 		  <li>Be apart of an advanced choir</li>
 		  <li>Audition for a lead role</li>
 	  </ul>
-
-<p>I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see them. 
-I've gone to elementary schools, middle schools, and different high schools to go see musicals too! I love seeing how different people do different things in theater. I
-love supporting other people and just watching musicals.</p>
-
 	  
   </div>
   <div class="footer">
