--- a/theater/index.html
+++ b/theater/index.html
@@ -33,7 +33,10 @@
 		  <li>8th grade: I got a small part and I made a lot of new friends.</li>
 		  <li>9th grade (current): This is my first year doing a high school musical and play!</li>
 	  </ul>
-	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="210" height="210" float=left> <img src="../images/eccles.jpg" alt="eccles" width="210" height="210" float=middle>
+	  <img src="../images/2ndgrade.jpg" alt="2nd grade" width="210" height="210" float=left> 
+	  <img src="../images/eccles.jpg" alt="eccles" width="210" height="210" float=middle>
+	  <img src="../images/concert.jpg" alt="concert" width="210" height="210" float=middle>
+	  <img src="../images/concert2.jpg" alt="concert2" width="210" height="210" float=right>
 
 	  <p>I love being entertained. Either by theater performances, comedy, movies, shows, or concerts.I have seen many musicals. Hale Centre Theatre and Eccles are my favorite places to see them.
 I've gone to elementary schools, middle schools, and different high schools to go see musicals too! I love seeing how different people do different things in theater. I
