--- a/theater/index.html
+++ b/theater/index.html
@@ -20,7 +20,8 @@
 	  I hope to keep doing theater throughout high school! </p>
 
 	  <h2>Spotlight: My Mom</h2>
-	  <p>I want to spotlight my Mom because she started my journey. Putting me in the musical in 2nd grade changed my life. She has supported the most along the way, and I am grateful for that.</p>
+	  <p>I want to spotlight my Mom because she started my journey. Putting me in the musical in 2nd grade changed my life. 
+	She has supported me the most along the way, and I am grateful for that.</p>
 	  
 	  <h2>Timeline</h2>
 	  <ul>
