--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,10 +15,21 @@
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../theater/index.html">Theater</a> </h3>
   </div>
   <div class="content">
+
+	  <h3>Timeine </h3>
+	  <img src="" alt="Timeline" width="960" >
+	
+	  <h3>Etch-A-Sketch </h3>
+	  <img src="../images/type.png" alt="Typing Test" width="960" >
+	
+	  <h3>ShapeGame </h3>
+          <img src="../images/type.png" alt="Typing Test" width="960" >
+	  
 	  <h3>Typing Results </h3>
 	  <img src="../images/type.png" alt="Typing Test" width="960" >
 	  <h3>Coding Projects </h3>
 	  <h3>Certifications</h3>
+ 
   </div>
   <div class="footer">
     <h4> <a href="../aboutme.html">About Me </a> | <a href="mailto:9647305@graniteschools.org">Contact</a> | Copyright 2021</h4>
