--- a/ecs/index.html
+++ b/ecs/index.html
@@ -17,7 +17,7 @@
   <div class="content">
 
 	  <h3>Timeine </h3>
-	  <img src="" alt="Timeline" width="960" >
+	  <img src="../images/Timeline.png" alt="Timeline">
 	
 	  <h3>Etch-A-Sketch </h3>
 	  <img src="../images/type.png" alt="Typing Test" width="960" >
