--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,9 +18,10 @@
 
 	  <h3>Timeine </h3>
 	  <img src="../images/Timeline.png" alt="Timeline">
+	  <p>Interactive timeline showing events the history of tennis</p>
 	
 	  <h3>Etch-A-Sketch </h3>
-	  <img src="../images/type.png" alt="Typing Test" width="960" >
+	  <img src="" alt="Etch-A-Sketch" width="960" >
 	
 	  <h3>ShapeGame </h3>
           <img src="../images/type.png" alt="Typing Test" width="960" >
