--- a/ecs/index.html
+++ b/ecs/index.html
@@ -21,7 +21,8 @@
 	  <p>Interactive timeline showing events the history of tennis</p>
 	
 	  <h3>Etch-A-Sketch </h3>
-	  <img src="" alt="Etch-A-Sketch" width="960" >
+	  <img src="../images/etchasketch.png" alt="Etch-A-Sketch">
+	  <p>Interactive Etch-A-Sketch drawing game</p>
 	
 	  <h3>ShapeGame </h3>
           <img src="../images/type.png" alt="Typing Test" width="960" >
