--- a/ecs/index.html
+++ b/ecs/index.html
@@ -25,7 +25,7 @@
 	  <p>Interactive Etch-A-Sketch drawing game</p>
 	
 	  <h3>ShapeGame </h3>
-          <img src="../images/type.png" alt="Typing Test" width="960" >
+          <img src="../images/" alt="Shape Game">
 	  
 	  <h3>Typing Results </h3>
 	  <img src="../images/type.png" alt="Typing Test" width="960" >
