--- a/ecs/index.html
+++ b/ecs/index.html
@@ -25,7 +25,8 @@
 	  <p>Interactive Etch-A-Sketch drawing game</p>
 	
 	  <h3>ShapeGame </h3>
-          <img src="../images/" alt="Shape Game">
+          <img src="../images/shapegame.png" alt="Shape Game">
+	  <p>How many times can you hit the tennis ball?</p>
 	  
 	  <h3>Typing Results </h3>
 	  <img src="../images/type.png" alt="Typing Test" width="960" >
