--- a/ecs/index.html
+++ b/ecs/index.html
@@ -17,15 +17,15 @@
   <div class="content">
 
 	  <h3>Timeine </h3>
-	  <img src="../images/Timeline.png" alt="Timeline">
+	  <img src="../images/Timeline.png" alt="Timeline" width=700 >
 	  <p>Interactive timeline showing events the history of tennis</p>
 	
 	  <h3>Etch-A-Sketch </h3>
-	  <img src="../images/etchasketch.png" alt="Etch-A-Sketch">
+	  <img src="../images/etchasketch.png" alt="Etch-A-Sketch" width=700>
 	  <p>Interactive Etch-A-Sketch drawing game</p>
 	
 	  <h3>ShapeGame </h3>
-          <img src="../images/shapegame.png" alt="Shape Game">
+          <img src="../images/shapegame.png" alt="Shape Game" width=700>
 	  <p>How many times can you hit the tennis ball?</p>
 	  
 	  <h3>Typing Results </h3>
