--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,6 +15,9 @@
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../theater/index.html">Theater</a> </h3>
   </div>
   <div class="content">
+	    <h3>Final Project </h3>
+	  <img src="../images/" alt="Final Project" width="700">
+	  <p>Pacman game with all the elements learned from this unit</p>
 
 	  <h3>Timeine </h3>
 	  <img src="../images/Timeline.png" alt="Timeline" width="700">
