--- a/ecs/index.html
+++ b/ecs/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="content">
 	    <h3>Final Project </h3>
-	  <img src="../images/" alt="Final Project" width="700">
+	  <img src="../images/Finalproject.png" alt="Final Project" width="700">
 	  <p>Pacman game with all the elements learned from this unit</p>
 
 	  <h3>Timeine </h3>
