--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,6 +18,8 @@
 	    <h3>Final Project </h3>
 	  <img src="../images/Finalproject.png" alt="Final Project" width="700">
 	  <p>Pacman game with all the elements learned from this unit</p>
+	  <p>I made this game through Processing. My favorite part of making this game was being able to make the pacman
+	  to move. It was also intresting learning how to make a game.</p>
 
 	  <h3>Timeine </h3>
 	  <img src="../images/Timeline.png" alt="Timeline" width="700">
