--- a/ecs/index.html
+++ b/ecs/index.html
@@ -15,8 +15,11 @@
     <h3> <a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../theater/index.html">Theater</a> </h3>
   </div>
   <div class="content">
-	    <h3>Final Project </h3>
-	  <img src="../images/finalproject2.png" alt="Final Project" width="700">
+	  
+	  <h3>Coding Projects </h3>
+	  
+	  <h3>Final Project </h3>
+	  <img src="../images/finalscreenshot2.png" alt="Final Project" width="700">
 	  <p>Clone of interactive Pacman game with all the elements learned from this unit</p>
 	  <p>I made this game through Processing. My favorite part of making this game was being able to make the pacman
 	  to move. It was also intresting learning how to make a game.</p>
@@ -32,14 +35,12 @@
 	  <h3>ShapeGame </h3>
           <img src="../images/shapegame.png" alt="Shape Game" width="700">
 	  <p>How many times can you hit the tennis ball?</p>
+	 
+	  <h3>Certifications</h3>
 	  
 	  <h3>Typing Results </h3>
 	  <img src="../images/type.png" alt="Typing Test" width="700" >
 	  <img src="../images/typingtest3.png" alt="Typing Test 2" width="700" >
-	 
-	  <h3>Coding Projects </h3>
-	 
-	  <h3>Certifications</h3>
  
   </div>
   <div class="footer">
